Added Test- Tribute Page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Github Introduction</title>
+  <title>Tribute to APJ Abdul Kalam Azad</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <style></style>
+  <script></script>
 </head>
+
 <body>
-<h1> Soon will be Updating the WebSite</h1>
-<p1> Just Wait n Watch </p1>
+
+<div class="canvas">
+  <h1 class="text-center page-title">APJ Abdul Kalam</h1>
+     <h2 class="text-center sub-title"><i>The Missile Man of India</i></h2>
+
+   <div class="row slideshow text-center">
+        <div class="col-md-2 col-sm-1">
+           <span class="toggle-button glyphicon glyphicon-chevron-left"></span>
+        </div>
+        <div class="col-md-8 col-sm-10">
+          <img class="profile-image img-thumbnail" src="images/slideshow4.jpg" alt="The People's President: Dr. A P J Abdul Kalam">
+        </div>
+        <div class="col-md-2 col-sm-1">
+          <span class="toggle-button glyphicon glyphicon-chevron-right"></span>
+        </div>
+    </div>
+
+  <div class="toggler-images">
+    <div class="circle" id=""></div>
+    <div class="circle" id=""></div>
+    <div class="circle" id=""></div>
+    <div class="circle" id=""></div>
+    <div class="circle" id=""></div>
+  </div>
+
+  <div class="timeline jumbotron">
+    <div class="headings">
+      <h3><center> Here's a brief timeline of this great personaity</center></h3>
+    </div>
+    <div class="contents">
+      <ul>
+        <li><b>1931:</b> Born Avul Pakir Jainulabdeen Abdul Kalam on October 15, in Rameswaram, Tamil Nadu.
+        <li><b>1954:</b> Graduates in Physics from Saint Joseph's College, Tiruchirappalli, in 1954.
+        <li><b>1960:</b> Gains degree in Aeronautical Engineering from Madras Institute of Technology.
+        <li><b>1969:</b> Transferred to ISRO from the DRDO.
+        <li><b>1980:</b> India enters the space club by putting the Rohini satellite in the near earth orbit with the first indigenous Satellite Launch Vehicle (SLV-III), developed under the stewardship of Dr. Kalam.
+        <li><b>1980s-1990s:</b> As the chief of the Integrated Guided Missile Development Programme, he was responsible for the development and operationalisation of AGNI and PRITHVI Missiles.
+        <li><b>1992-1999:</b> works as Chief Scientific Advisor to the PM and Secretary of the DRDO.
+        <li><b>1998:</b> India conducts the Pokhran II nuclear tests in May with Dr. Kalam as the chief project coordinator.
+        <li><b>1999-2001:</b> Principal Scientific Advisor to the Government of India.
+        <li><b>2002-2007:</b> President of India
+        <li><b>2015:</b> The 11th President of India, widely acclaimed as the "people's President", passed away on July 27 after collapsing during a lecture at the Indian Institute of Management in Shillong.
+      </ul>
+    </div>
+  </div>
+
+</div>
+
+<footer class="text-center">
+    <hr>
+    <p>Designed and Developed by <a href="https://www.freecodecamp.com/jaykay12" target="_blank">Jalaz Kumar</a>.</p>
+</footer>
 
 </body>
 </html>
