Added Responsive Behaviour using Media Queries

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <title>Tribute to APJ Abdul Kalam Azad</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/main.js"></script>
   <style></style>
   <script></script>
 </head>
@@ -15,26 +17,26 @@
 
 <div class="canvas">
   <h1 class="text-center page-title">APJ Abdul Kalam</h1>
-     <h2 class="text-center sub-title"><i>The Missile Man of India</i></h2>
+    <h2 class="text-center sub-title"><i>The Missile Man of India</i></h2>
 
    <div class="row slideshow text-center">
-        <div class="col-md-2 col-sm-1">
-           <span class="toggle-button glyphicon glyphicon-chevron-left"></span>
+        <div class="sidepane-1 col-md-2 col-sm-1">
+           <span class="toggle-button glyphicon glyphicon-chevron-left" onclick="changeImage(-1)"></span>
         </div>
         <div class="col-md-8 col-sm-10">
-          <img class="profile-image img-thumbnail" src="images/slideshow4.jpg" alt="The People's President: Dr. A P J Abdul Kalam">
+          <img class="profile-image img-thumbnail" id="current_image" src="images/slideshow1.jpg" alt="The People's President: Dr. A P J Abdul Kalam">
         </div>
-        <div class="col-md-2 col-sm-1">
-          <span class="toggle-button glyphicon glyphicon-chevron-right"></span>
+        <div class="sidepane-2 col-md-2 col-sm-1">
+          <span class="toggle-button glyphicon glyphicon-chevron-right" onclick="changeImage(1)"></span>
         </div>
     </div>
 
   <div class="toggler-images">
-    <div class="circle" id=""></div>
-    <div class="circle" id=""></div>
-    <div class="circle" id=""></div>
-    <div class="circle" id=""></div>
-    <div class="circle" id=""></div>
+    <div class="circle" onclick="showImage(1)"></div>
+    <div class="circle" onclick="showImage(2)"></div>
+    <div class="circle" onclick="showImage(3)"></div>
+    <div class="circle" onclick="showImage(4)"></div>
+    <div class="circle" onclick="showImage(5)"></div>
   </div>
 
   <div class="timeline jumbotron">
