Fixed Toggler Bug & Image Frame Size Bug

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
 
   <div class="toggler-images">
-    <div class="circle" onclick="showImage(1)"></div>
-    <div class="circle" onclick="showImage(2)"></div>
-    <div class="circle" onclick="showImage(3)"></div>
-    <div class="circle" onclick="showImage(4)"></div>
-    <div class="circle" onclick="showImage(5)"></div>
+    <div class="circle" id="image_index1" onclick="showImage(1)" style="background-color:#ABA592;"></div>
+    <div class="circle" id="image_index2" onclick="showImage(2)"></div>
+    <div class="circle" id="image_index3" onclick="showImage(3)"></div>
+    <div class="circle" id="image_index4" onclick="showImage(4)"></div>
+    <div class="circle" id="image_index5" onclick="showImage(5)"></div>
   </div>
 
   <div class="timeline jumbotron">
