fix for Responsive Behaviour not being shown in Toggle Buttons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1 class="text-center page-title">APJ Abdul Kalam</h1>
     <h2 class="text-center sub-title"><i>The Missile Man of India</i></h2>
 
-   <div class="row slideshow text-center">
+   <div class="row slideshow text-center" style="align-items: center;display: inline-flex;">
         <div class="sidepane-1 col-md-2 col-sm-1">
            <span class="toggle-button glyphicon glyphicon-chevron-left" onclick="changeImage(-1)"></span>
         </div>
