--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 
 </div>
 
-<footer class="text-center">
-    <hr>
+<footer class="text-center p-2 m-0">
     <p>Designed and Developed by <a href="https://www.freecodecamp.com/jaykay12" target="_blank">Jalaz Kumar</a>.</p>
 </footer>
 
