--- a/index.html
+++ b/index.html
@@ -20,17 +20,7 @@
   <h1 class="text-center page-title">APJ Abdul Kalam</h1>
     <h2 class="text-center sub-title"><i>The Missile Man of India</i></h2>
 
-   <div class="row slideshow text-center" style="align-items: center;display: inline-flex;width: 100%">
-        <div class="sidepane-1 col-md-2 col-sm-1">
-           <span class="toggle-button glyphicon glyphicon-chevron-left" onclick="changeImage(-1)"></span>
-        </div>
-        <div class="col-md-8 col-sm-10">
-          <img class="profile-image img-thumbnail" id="current_image" src="images/slideshow1.jpg" alt="The People's President: Dr. A P J Abdul Kalam">
-        </div>
-        <div class="sidepane-2 col-md-2 col-sm-1">
-          <span class="toggle-button glyphicon glyphicon-chevron-right" onclick="changeImage(1)"></span>
-        </div>
-    </div>
+   <div class="slideshow2"></div>
 
   <div class="toggler-images">
     <div class="circle" id="image_index1" onclick="showImage(1)" style="background-color:#ABA592;"></div>
